--- a/eventapplication/templates/eventapplication/registration.html
+++ b/eventapplication/templates/eventapplication/registration.html
@@ -24,32 +24,28 @@
         <div class="row">
             <div class="col-12">
                 <h1>Application</h1>
-                <form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">NAME:</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">EMAIL:</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">PHONE NO. :</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Phone number">
-  </div>
-  
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+                <form method="POST" action="/registration/">
+                    {%csrf_token%}
 
 
-            </div>
-        </div>
-    </div>
-  
 
-    
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">NAME:</label>
+                        <input type="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter name">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone
+                            else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">EMAIL:</label>
+                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">PHONE NO. :</label>
+                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Phone number">
+                    </div>
 
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
 
                 <!-- Optional JavaScript -->
                 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
