--- a/eventapplication/templates/eventapplication/success.html
+++ b/eventapplication/templates/eventapplication/success.html
@@ -8,40 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, guyss!</title>
+    <title>YAAY!</title>
   </head>
   <body>
-    <div class="jumbotron">
-        <div class="container">
-  <h1 class="display-4">WELCOME TO PLAZA 2021</h1>
-  <p class="lead"> How you doin ? </p>
-  <hr class="my-4">
-  <p> We are happy to invite you to our culturals<br>
-      to have more fun <br>
-      DO REGISTER!!
-  </p>
- 
-</div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1> one day fun day</h1>
-
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <a href="/registration" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Register</a>
-            </div>
-        </div>
-    </div>
-
-
-    
-
+    <h1>CONGRATSS!! YOU APPLICATION HAS BEEN ACCEPTED!!</h1>
+    <h2>now you are also a part of stacy's
+    </h2>
+    <a href="/home/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
